--- a/Helperland/helperland1.0/Views/Shared/CustomerDashboardPartial.cshtml
+++ b/Helperland/helperland1.0/Views/Shared/CustomerDashboardPartial.cshtml
@@ -20,11 +20,12 @@ String CurrentDate = DateTime.Now.AddDays(1).ToString("yyyy-MM-dd");
         <table id="dashbordTable" class="table">
             <thead class="table-light">
                 <tr class="text-center">
-                    <th scope="col"> Service ID</th>
-                    <th scope="col"> Service Date </th>
-                    <th scope="col"> Service Provider</th>
-                    <th scope="col"> Payment </th>
-                    <th colspan="2" scope="col"> Action </th>
+                    <th scope="col" style="width: 17%"> Service ID <img src="/image/sort.png"></th>
+                    <th scope="col" style="width: 20%"> Service Date <img src="/image/sort.png"> </th>
+                    <th scope="col" style="width: 30%"> Service Provider <img src="/image/sort.png"> </th>
+                    <th scope="col" style="width: 15%"> Payment <img src="/image/sort.png"> </th>
+                    <th scope="col" style="width: 9% ;text-align:end;padding-right:0px"> Acti</th>
+                    <th scope="col" style="width: 9%  ;text-align:start;padding-left:0px"">on</th>
 
                 </tr>
             </thead>
@@ -49,7 +50,7 @@ String CurrentDate = DateTime.Now.AddDays(1).ToString("yyyy-MM-dd");
 
                                 </td>
                                 <td data-label="Service Date">
-                                    <div> <img src="~/image/calendar.png" alt="calender"> @item.Date </div>
+                                    <div> <img src="/image/calendar.png" alt="calender"> @item.Date </div>
                                     <p class="service-time"> @item.StartTime - @item.EndTime </p>
 
                                 </td>
@@ -113,8 +114,8 @@ String CurrentDate = DateTime.Now.AddDays(1).ToString("yyyy-MM-dd");
                             <span>
 
 
-                                <img src="~/image/calendar.png" alt="calender"><h6 class="d-inline pe-2 "> <span class="d-none d-sm-block">Service</span>  Date:</h6><span class="date mb-0">@item.Date</span><br>
-                                <img src="~/image/clock.png" alt="calender"><h6 class="pe-2 d-inline  "><span class="d-none d-sm-block">Service</span> Time:</h6> @item.StartTime - @item.EndTime
+                                <img src="/image/calendar.png" alt="calender"><h6 class="d-inline pe-2 "> <span class="d-none d-sm-block">Service</span>  Date:</h6><span class="date mb-0">@item.Date</span><br>
+                                <img src="/image/clock.png" alt="calender"><h6 class="pe-2 d-inline  "><span class="d-none d-sm-block">Service</span> Time:</h6> @item.StartTime - @item.EndTime
 
 
                             </span>
@@ -175,65 +176,11 @@ String CurrentDate = DateTime.Now.AddDays(1).ToString("yyyy-MM-dd");
        
     </div>
 
-    <div class="pagenum">
-        <div class="pagenum-left">
-            <p>Show</p>
-            <div class="pagenum-drop">
-                10
-            </div>
-            <p>entries</p>
-            <p style="margin-left: 8px;">Total Record: @ServiceDashboardCount</p>
-        </div>
-        <div class="pagenum-right">
-            <div class="pagenum-btn">
-                <img src="~/image/first-page.png" alt="">
-            </div>
-            <div class="pagenum-btn">
-                <img src="~/image/keyboard-right-arrow-button-copy.png" alt="">
-            </div>
-            <div class="pagenum-btn active">
-                1
-            </div>
-            <div class="pagenum-btn">
-                2
-            </div>
-            <div class="pagenum-btn">
-                3
-            </div>
-            <div class="pagenum-btn">
-                4
-            </div>
-            <div class="pagenum-btn">
-                <img class="transform_btn" src="~/image/keyboard-right-arrow-button-copy.png" alt="">
-            </div>
-            <div class="pagenum-btn">
-                <img class="transform_btn" src="~/image/first-page.png" alt="">
-            </div>
-        </div>
-    </div>
+  
 
 </div>
 
 
-@*
-    <div class="modal" tabindex="-1" id="serviceRequestCancelModal">
-    <div class="modal-dialog modal-dialog-centered">
-    <div class="modal-content">
-    <div class="modal-header">
-    <h4 class="modal-title">Cancel Service Request</h4>
-    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-    </div>
-    <div class="modal-body">
-    <input type="hidden" id="CancelRequestId" name="CancelRequestId" />
-    <p><label for="cancelReason">Why you want to cancel the service request?</label></p>
-    <textarea name="cancelReason" id="cancelReason" cols="30" rows="10"></textarea>
-    </div>
-    <div class="modal-footer">
-    <button type="button" class="btn cancelBtn" id="CancelRequestBtn">Cancel Now</button>
-    </div>
-    </div>
-    </div>
-    </div>*@
 
 
 
