--- a/Helperland/helperland1.0/Views/Shared/CustomerServiceHistoryPartial.cshtml
+++ b/Helperland/helperland1.0/Views/Shared/CustomerServiceHistoryPartial.cshtml
@@ -13,10 +13,10 @@
         <table class="table" id="ServiceHistoryTable">
             <thead class="table-light">
                 <tr class="text-center">
-                    <th scope="col"> Service Details @*<img src="~/image/sort.png" alt="...">*@</th>
-                    <th scope="col"> Service Provider @*<img src="~/image/sort.png" alt="...">*@</th>
-                    <th scope="col"> Payment @*<img src="~/image/sort.png" alt="...">*@</th>
-                    <th scope="col"> Status @*<img src="~/image/sort.png" alt="...">*@</th>
+                    <th scope="col" class="serviceHistoryServiceDetails"> Service Details <img src="/image/sort.png"></th>
+                    <th scope="col" class="serviceHistoryServiceProvider"> Service Provider <img src="/image/sort.png"></th>
+                    <th scope="col" class="serviceHistoryServicePayment"> Payment <img src="/image/sort.png"></th>
+                    <th scope="col" class="serviceHistoryServiceStatus"> Status <img src="/image/sort.png"></th>
                     <th scope="col"> Rate SP </th>
                 </tr>
             </thead>
