Conflict algo & and bug fixed as per told by guide

--- a/Helperland/helperland1.0/Views/Shared/CustomerDashboardPartial.cshtml
+++ b/Helperland/helperland1.0/Views/Shared/CustomerDashboardPartial.cshtml
@@ -250,7 +250,7 @@ String CurrentDate = DateTime.Now.AddDays(1).ToString("yyyy-MM-dd");
 
 
                     <div class="text-center  d-flex justify-content-around">
-                        <button class="rate">Rate </button>
+                        <button class="rate" data-bs-toggle="modal" data-bs-target="#myRatingModal" >Rate </button>
                     </div>
 
                 </span>
