Block Customer done

--- a/Helperland/helperland1.0/Views/Shared/SpBlockCustomer.cshtml
+++ b/Helperland/helperland1.0/Views/Shared/SpBlockCustomer.cshtml
@@ -1,3 +1,7 @@
-﻿<div id="Dashboard" class="tab-contant">
-<h1>BlockCustomer</h1>
+﻿<div id="BlockCustomer" class="tab-contant">
+    <div class="row" id="customerGrid">
+       
+       
+    </div>
+
 </div>
