--- a/Helperland/helperland1.0/Views/ServiceProvider/SPServiceRequest.cshtml
+++ b/Helperland/helperland1.0/Views/ServiceProvider/SPServiceRequest.cshtml
@@ -25,7 +25,7 @@
     <div class="tab" id="verticaltab">
 
 
-        <button class="tablinks" onclick="Sp_TabNav(event, 'Dashboard')" id="DashboardTabBtn">Dashboard</button>
+        <button class="tablinks"  id="DashboardTabBtn">Dashboard</button>
 
 
         <button class="tablinks" onclick="Sp_TabNav(event, 'NewServiceRequest')" id="NewServiceRequestTabBtn">
@@ -43,12 +43,14 @@
 
         </button>
 
-        <button class="tablinks" onclick="Sp_TabNav(event, 'ServiceSchedule')" id="ServiceScheduleTabBtn"> Service Schedule </button>
+        <button class="tablinks"  id="ServiceScheduleTabBtn"> Service Schedule </button>
         <button class="tablinks" onclick="Sp_TabNav(event, 'ServiceHistory')" id="ServiceHistoryTabBtn">Service History</button>
         <button class="tablinks" onclick="Sp_TabNav(event, 'MyRating')" id="MyRatingTabBtn">My Rating</button>
         <button class="tablinks " onclick="Sp_TabNav(event, 'BlockCustomer')" id="BlockCustomerTabBtn">Block Customer</button>
-        <button class="tablinks " onclick="Sp_TabNav(event, 'Invoice')" id="InvoiceTabBtn">Invoice</button>
-        <button class="tablinks " onclick="Sp_TabNav(event, 'Notification')" id="SettingsTabBtn">Notification</button>
+        <button class="tablinks " id="InvoiceTabBtn">Invoice</button>
+        <button class="tablinks " >Notification</button>
+        <button class="tablinks  " onclick="Sp_TabNav(event, 'SPSettings')" id="SettingsTabBtn">Settings</button>
+
 
 
     </div>
@@ -59,6 +61,7 @@
     @await Html.PartialAsync("SpNewServiceRequest")
     @await Html.PartialAsync("SpMyRating")
     @await Html.PartialAsync("SpBlockCustomer")
+     @await Html.PartialAsync("SpSettings")
 
 
 
