admin service request filter

--- a/Helperland/helperland1.0/Views/Shared/SpNewServiceRequest.cshtml
+++ b/Helperland/helperland1.0/Views/Shared/SpNewServiceRequest.cshtml
@@ -109,7 +109,7 @@
                         aria-label="Close"></button>
             </div>
             <div class="modal-body float-start row">
-                <div class="col">
+                <div class="col-md-6  col-sm-12">
                     <h4 id="SpServiceReqDatetime">05/10/2021 08:00 - 11:30</h4>
                     <p>Duration: <span id="SpServiceReqDuration"> 3 hrs </span> </p>
                     <hr>
@@ -140,11 +140,11 @@
                         <button id="newServiceReqCancelBtn" type="submit">Cancel</button>
                     </div>
 
-
+                
 
 
                 </div>
-                <div class="col" id="newServiceReqMap">
+                <div class="col-md-6 col-sm-12" id="newServiceReqMap">
                 </div>
 
             </div>
